# Documentation-helper

./: README.md  ingestion.py  main.py  pyproject.toml
backend/: core.py
frontend/: home.py
